# devtools-api-generate

./: devtools-api-generate.cabal
src/DevTools/Meta/: Generate.hs  Protocol.hs
